WexGit/Wex_DX/force-app/main/default/objects/FleetEnrollment_Vehicle__c/FleetEnrollment_Vehicle__c.object-meta.xml
<CustomObject>
    <label>Fleet Enrollment Vehicle</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Fleet Enrollment Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fleet Enrollment Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>