WexGit/Wex_DX/force-app/main/default/objects/FleetEnrollment_Vehicle__c/fields/Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Acceptance__c</fullName>
    <label>Acceptance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Label</fullName>
            </value>
            <value>
                <fullName>Universal</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <isActive>false</isActive>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>