WexGit/Wex_DX/force-app/main/default/objects/FleetEnrollment_Vehicle__c/fields/Customer_Vehicle_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Vehicle_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>In reports, your vehicles will be identified by the Vehicle ID (i.e., Unit 1) provided.</inlineHelpText>
    <label>Customer Vehicle ID</label>
    <length>17</length>
    <type>Text</type>
</CustomField>