WexGit/Wex_DX/force-app/main/default/objects/FleetEnrollment_Vehicle__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Your invoices will be sub-totaled by department, i.e., Sales, Services, etc.</inlineHelpText>
    <label>Department</label>
    <length>17</length>
    <type>Text</type>
</CustomField>