WexGit/Wex_DX/force-app/main/default/objects/FleetEnrollment_Vehicle__c/fields/Fleet_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fleet Enrollment</label>
    <referenceTo>FleetEnrollment__c</referenceTo>
    <relationshipName>Fleet_Enrollment_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>