WexGit/Wex_DX/force-app/main/default/objects/FleetEnrollment_Vehicle__c/fields/License_Plate__c.field-meta.xml
<CustomField>
    <fullName>License_Plate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>In reports, your vehicles will be identified by the license plate numbers provided.</inlineHelpText>
    <label>License Plate #</label>
    <length>8</length>
    <type>Text</type>
</CustomField>