WexGit/Wex_DX/force-app/main/default/objects/FleetEnrollment_Vehicle__c/fields/Vehicle_Description__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>In reports, your vehicles will be identified by the vehicle descriptions (i.e., make/model) provided.</inlineHelpText>
    <label>Vehicle Description</label>
    <length>17</length>
    <type>Text</type>
</CustomField>